--- a/meta/main.yml
+++ b/meta/main.yml
@@ -130,7 +130,7 @@ galaxy_info:
   #  - 9.1
   #  - 9.2
   #  - 9.3
-  - name: Ubuntu
+  #- name: Ubuntu
   #  versions:
   #  - all
   #  - artful
@@ -142,7 +142,7 @@ galaxy_info:
   #  - quantal
   #  - raring
   #  - saucy
-   - trusty
+  # - trusty
   #  - utopic
   #  - vivid
   #  - wily
